mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-db
  labels:
    name: mysql-db
---
apiVersion: v1
kind: Service
metadata:
  namespace: mysql-db
  name: mysql-db
  labels:
    app: mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30036
      protocol: TCP
  selector:
    app: mysql
    tier: mysql
  # clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mysql-db
  name: mysql-db
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7.32
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
