minikube-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: dashboard-ingress
    #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #ingressClassName: nginx
  rules:
  - host: minikube.test
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
        path: /
        pathType: Prefix
